log-output/manifests/1.10/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-timestamps
          emptyDir: { }
      containers:
        - name: log-output-writer
          image: 2kai/k8s-school-log-output-writer:latest
          volumeMounts:
            - name: shared-timestamps
              mountPath: /opt/timestamps
        - name: log-output-reader
          image: 2kai/k8s-school-log-output-reader:latest
          volumeMounts:
            - name: shared-timestamps
              mountPath: /opt/timestamps
