log-output/manifests/1.10/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-reader-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8091
